add: 회원가입 추가, add: 예외처리, 성공처리 추가, fix: jwt 관련 문제 수정 (db 접속에 문제가 생겨 테스티 실패)